# ChatProj

./: .gitignore  CMakeLists.txt  main.cpp
chatcore/: CMakeLists.txt
chatcore/model/: Chat.cpp  Chat.h  ChatRegister.cpp  User.h
chatcore/network/: EventSocket.h  EventSocketReceiver.h  EventSocketServer.h  EventSocketServerReceiver.h  QTcpServerAdapter.cpp  QTcpServerAdapter.h  QTcpSocketAdapter.cpp  QTcpSocketAdapter.h  QWebServerAdapter.cpp  QWebServerAdapter.h  QWebSocketAdapter.cpp  QWebSocketAdapter.h  Socket.cpp  Socket.h  SocketServer.cpp  SocketServer.h
chatcore/protocol/: Packet.h
chatcore/protocol/concrete_packets/: MessagePacket.h  SignOut.h  SignXResponse.h  UserList.h  UserListResponse.h
client/: ChatApp.cpp  ChatApp.h  SignXDialog.cpp  SignXDialog.h
client_api/: ChatAPI.cpp  ChatAPI.h
gui/: ChatController.cpp  ChatController.h  ChatRegisterController.cpp  ChatRegisterController.h  ChatRegisterView.ui  chatregisterview.cpp  chatregisterview.h  chatview.cpp  chatview.h  chatview.ui
model/: Chat.cpp  Chat.h  ChatRegister.cpp  ChatRegister.h  Message.h  User.cpp
network/: EventSocket.h  EventSocketServer.h  ObservableSocket.h  SimpleSocket.cpp  SimpleSocket.h  Socket.cpp  Socket.h  SocketServer.cpp  SocketServer.h
patterns/: Mediator.h  Observer.h  Subject.h
protocol/: PacketFactory.cpp  PacketFactory.h
protocol/concrete_packets/: SignIn.h  SignUp.h  SignUpResponse.h
server/: ChatServer.cpp  ChatServer.h  UserEntry.cpp  UserEntry.h  UsersDatabase.cpp  UsersDatabase.h  main.cpp
